# IRCpp

./: .gitignore  CMakeLists.txt  IRCppClient.cpp  IRCppServer.cpp  README.md  Sandbox.cpp  generate_product_version.cmake
src/client/: ClientSocket.cpp  ClientSocket.h  CmdProccessor.cpp  CmdProccessor.h  CmdProcessor.cpp  CmdProcessor.h  GUIReferences.h
src/common/: CommandDefinitions.h  Logger.cpp  Logger.h  SocketConnection.cpp  SocketConnection.h  SocketConstants.h  Utils.cpp  Utils.h
src/server/: CmdProccessor.cpp  CmdProccessor.h  CmdProcessor.cpp  CmdProcessor.h  ServerSocket.cpp  ServerSocket.h
